--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ body{
 }
 
 h1{
-    text-align: 42px;
+    font-size: 42px;
+    text-align: center;
     padding: 15px;
     /* font-family: "Arial Black", Helvetica, sans-serif;
     font-size: 8mm;
@@ -16,7 +17,8 @@ h1{
 }
 
 h2{
-    color:#0D0D0D 30px;
+    font-size: 30px;
+    color:#0D0D0D;
     /* background-color: aliceblue;
     border: black 3px dashed; */
 }
@@ -41,7 +43,7 @@ div{
 
 }
 
-.intro{
+.introduction{
     border-radius: 15px;
     margin-top: 15px;
     line-height: 2; /* 200% works the same */
@@ -63,7 +65,7 @@ div.blue{
    
 }
 
-div.blue.h2.p{
+.blue h2, .blue p{
     color: #C4C4C4;
 
 }
@@ -81,7 +83,7 @@ div.yellow p{
 }
 
 div.green{
-    background-color:#00EB00;
+    background-color:#008500;
     text-align:left;
     margin-right:50px;
     border-width:2px 5px 0px 0px;
