maybe final update

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ div{
 
 }
 div.blue{
-    background-color:#0000fa;
+    background-color:#0000FF;
     text-align:left;
     margin: 0px 50px 0px 0px;
     border-width: 2px 5px 0px 0px;
@@ -71,7 +71,7 @@ div.blue{
 }
 
 div.yellow{
-    background-color: #ffff47;
+    background-color: #FFFF00;
     text-align: right;
     margin-left:50px;
     border-width: 0px 0px 2px 5px;
@@ -97,6 +97,7 @@ footer{
 }
 
 footer p{
+    font-size: 20px;
     text-align:right;
     padding: 15px 15px 15px 0px;
 
